# passwordgen

./: .coveragerc  .flake8  .gitignore  LICENSE  Makefile  Pipfile  README.md  passwordgen.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
examples/: notebook.ipynb
src/passwordgen/: __init__.py  __main__.py  cli.py  config.py  containers.py  i18n.py  passwords.py  randomstring.py  strength.py  util.py
src/passwordgen/algorithms/: __init__.py  abc.py  randomstring.py  xkcd.py
src/passwordgen/common/: __init__.py  classes.py  typehints.py  util.py
src/passwordgen/config/: __init__.py  manager.py  schema.py
src/passwordgen/data/: dictionaries.json
src/passwordgen/data/dictionaries/: LICENCE  en_GB.txt  es_ES.txt  es_MX.txt  fr.txt  it_IT.txt
src/passwordgen/data/wordlists/: de_DE.txt  en_US.wl
src/passwordgen/dictionaries/: __init__.py  abc.py  hunspell.py
src/passwordgen/generators/: __init__.py  abc.py  alternating.py  base.py  easyrandom.py  randomstring.py  randstring.py  symbols.py  words.py  xkcd.py
src/passwordgen/generators/builders/: __init__.py  abc.py  easyrandombuilder.py  xkcdbuilder.py
src/passwordgen/gui/: __init__.py  app.py  config_frames.py  mainframe.py  results_frame.py  settings_dialog.py
src/passwordgen/locales/es/LC_MESSAGES/: passwordgen.po  secure_passwords.po
src/passwordgen/utils/: dicfiles.py
src/passwordgen/wordlists/: __init__.py  downloader.py  eff_large.txt  spanish.txt
src/secure_passwords/gui/: results_frame.py  settings_dialog.py
tests/: test_alternating_generator.py  test_builders.py  test_common.py  test_config_manager.py  test_dicfiles.py  test_easyrandom.py  test_hunspell.py  test_hunspell_processor.py  test_i18n.py  test_main.py  test_randomstring.py  test_strength.py  test_symbols_generator.py  test_util.py  test_wordlist_loader.py  test_words_generator.py  test_xkcd.py
