[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passwordgen"
version = "0.1.0"
authors = [
  { name="knkillname", email="7888827+knkillname@users.noreply.github.com" },
]
description = "A small password generator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[project.scripts]
passwordgen = "passwordgen.__main__:main"
