[project]
name = "secure-passwords"
version = "0.1.0"
description = "Secure password generator with Tkinter GUI"
readme = "README.md"
requires-python = ">=3.14"

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pylint.main]
py-version = "3.14"
source-roots = ["src"]

[tool.pylint.messages_control]

[tool.pylint.design]
max-parents = 12
max-attributes = 22

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D202"]

[tool.coverage.run]
source = ["src/secure_passwords"]
branch = true
omit = [
	"src/secure_passwords/__main__.py",
	"src/secure_passwords/gui/*",
	"src/secure_passwords/wordlists/downloader.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
