[project]
name = "passwordgen"
version = "2.0.0"
description = "Secure password generator with Tkinter GUI"
readme = "README.md"
requires-python = ">=3.14"

[project.scripts]
passwordgen = "passwordgen.cli:cli"

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pylint.main]
py-version = "3.14"
source-roots = ["src"]

[tool.pylint.messages_control]

[tool.pylint.design]
max-parents = 12
max-attributes = 22

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D202"]

[tool.coverage.run]
source = ["src/passwordgen"]
branch = true
omit = [
	"*/passwordgen/__main__.py",
	"*/passwordgen/gui/*",
	"*/passwordgen/wordlists/downloader.py",
	"*/passwordgen/i18n.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
omit = [
	"*/passwordgen/__main__.py",
	"*/passwordgen/gui/*",
	"*/passwordgen/wordlists/downloader.py",
	"*/passwordgen/i18n.py",
]
